# anatro-rs

./: .gitignore  Cargo.toml  GEMINI.md  README.md  THIRD-PARTY-LICENSES.html  about.toml
scripts/: anatro.lua  install.sh
src/: cli.rs  lib.rs  main.rs
src/domain/: audio.rs  kvfs.rs  matcher.rs  mod.rs  pipeline.rs  preset.rs  result.rs  scanner.rs  traits.rs
src/infrastructure/: chromaprint.rs  cross_correlate_adapter.rs  ffmpeg.rs  mod.rs  symphonia_adapter.rs
