[package]
name = "anatro-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
audioadapter = "3.0.0"
chromaprint = "0.2.0"
clap = { version = "4.6.0", features = ["derive"] }
cross_correlate = "0.1.4"
dialoguer = "0.12.0"
env_logger = "0.11.10"
indicatif = "0.18.4"
log = "0.4.29"
num-complex = "0.4.6"
rayon = "1.11.0"
rubato = "2.0.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["all"] }
thiserror = "2.0.18"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
