[package]
name = "anatro-rs"
version = "1.0.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.102"
audioadapter = "3.0.0"
chromaprint = "0.2.0"
clap = { version = "4.6.0", features = ["derive"] }
cross_correlate = "0.3.1"
dialoguer = "0.12.0"
dirs = "6.0.0"
env_logger = "0.11.10"
indicatif = "0.18.4"
log = "0.4.29"
num-complex = "0.4.6"
rayon = "1.11.0"
rubato = "2.0.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = { version = "0.5.5", features = ["all"] }
thiserror = "2.0.18"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
